test/invalid/super_outside_class.py
# super() used outside class
def main() -> None:
    super().__init__()  # super() can only be used inside a class method
